feat online_compiler: generate swag configs
